# resources/views/emails/password-reset-otp.blade.php
@@ -1,0 +1,9 @@
+<h2>Password Reset Request</h2>
+
+<p>Your verification code is:</p>
+
+<h1>
+    {{ $otp }}
+</h1>
+
+<p>This code will expire in 10 minutes.</p>
